--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@huggingface/transformers": "^3.2.4",
     "@prisma/client": "^6.2.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/file-saver": "^2.0.7",
+    "@types/fs-extra": "^11.0.4",
     "@types/jsonwebtoken": "^9.0.7",
     "bcryptjs": "^2.4.3",
     "docx": "^9.1.0",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
