--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/file-saver": "^2.0.7",
     "@types/fs-extra": "^11.0.4",
@@ -28,6 +30,7 @@
     "react-dom": "19.0.0",
     "resend": "^4.0.1",
     "sharp": "^0.33.5",
+    "stripe": "^17.6.0",
     "vercel": "^39.2.6"
   },
   "devDependencies": {
